# mcps

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: email.Dockerfile  filesystem.Dockerfile  navidrome.Dockerfile  slskd.Dockerfile  tg-export-txt.Dockerfile
services/email_mcp/: README.md  docker-compose.yml  pyproject.toml
services/email_mcp/src/email_mcp/: __main__.py  app.py  client.py  config.py  formatters.py  guidance.py  mime.py  models.py  service.py  signing.py
services/email_mcp/src/email_mcp/resources/email-usage/: SKILL.md
services/email_mcp/src/email_mcp/tools/: __init__.py  accounts.py  messages.py  send.py
services/filesystem_mcp/: README.md  docker-compose.yml  pyproject.toml
services/filesystem_mcp/src/filesystem_mcp/: __main__.py  app.py  config.py  formatters.py  models.py  service.py
services/filesystem_mcp/src/filesystem_mcp/tools/: __init__.py  directory.py  info.py  read.py  search.py  write.py
services/navidrome_mcp/: .env.example  README.md  docker-compose.yml  pyproject.toml
services/navidrome_mcp/src/navidrome_mcp/: __main__.py  app.py  auth.py  client.py  config.py  formatters.py  models.py  normalize.py
services/navidrome_mcp/src/navidrome_mcp/tools/: __init__.py  get.py  list.py  mutate.py  playlists.py  search.py
services/slskd_mcp/: .env.example  README.md  docker-compose.yml  pyproject.toml
services/slskd_mcp/src/slskd_mcp/: __main__.py  app.py  auth.py  client.py  config.py  formatters.py  models.py  normalize.py
services/slskd_mcp/src/slskd_mcp/tools/: __init__.py  downloads.py  files.py  searches.py  uploads.py  users.py
services/tg_export_txt_mcp/: README.md  docker-compose.yml  pyproject.toml
services/tg_export_txt_mcp/src/tg_export_txt_mcp/: __main__.py  app.py  config.py  formatters.py  models.py  service.py
services/tg_export_txt_mcp/src/tg_export_txt_mcp/tools/: __init__.py  chat.py  cli.py  files.py  read.py  search.py  topics.py
src/mcps_workspace/: __init__.py  agents.py  installer.py  models.py  prompts.py  runner.py  secrets.py  smoke.py  storage.py  validation.py
tests/common/: test_common_auth.py  test_http.py  test_runtime.py  test_tool_metadata.py  test_tool_registry.py
tests/email_mcp/: __init__.py  test_client.py  test_config.py  test_mime.py  test_service.py  test_tools.py
tests/filesystem_mcp/: __init__.py  test_filesystem_config.py  test_service.py  test_tools.py
tests/installer/: __init__.py  test_agents.py  test_installer.py  test_prompts.py  test_smoke.py  test_storage.py  test_validation.py
tests/navidrome_mcp/: __init__.py  test_client.py  test_navidrome_auth.py  test_navidrome_formatters.py  test_navidrome_tools.py
tests/slskd_mcp/: __init__.py  test_config.py  test_normalize.py  test_slskd_auth.py  test_slskd_formatters.py  test_slskd_tools.py
tests/tg_export_txt_mcp/: __init__.py  test_cli.py  test_config.py  test_service.py  test_tools.py
