[project]
name = "mcps-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/mcp_common",
  "services/filesystem_mcp",
  "services/navidrome_mcp",
  "services/slskd_mcp",
  "services/tg_export_txt_mcp",
]

[tool.uv.sources]
mcp-common = { workspace = true }

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=0.25.0",
  "pytest-httpx>=0.35.0",
  "respx>=0.22.0",
  "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "N",
  "I",
  "FLY",
  "PERF",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "PLR",
  "UP",
  "FURB",
  "RUF",
  "TRY",
  "B",
  "YTT",
  "ANN",
  "S",
  "FBT",
  "A",
  "COM",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "SLOT",
  "TID",
  "ARG",
  "PTH",
  "ASYNC",
]
ignore = [
  "COM812",
  "TRY003",
  "TRY301",
  "RUF012",
  "FBT001",
  "FBT002",
  "FBT003",
  "PLR2004",
  "S104",
]

[tool.ruff.lint.isort]
known-first-party = [
  "filesystem_mcp",
  "mcp_common",
  "navidrome_mcp",
  "slskd_mcp",
  "tg_export_txt_mcp",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401",
  "PLC0414",
]
"test_*.py" = [
  "S101",
  "S106",
  "INP001",
  "PLR2004",
  "SLF001",
  "ARG001",
  "ARG002",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
ignore-fully-untyped = false
suppress-none-returning = true
suppress-dummy-args = true

[tool.ruff.lint.flake8-builtins]
builtins-strict-checking = false

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 7

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
pretty = true
allow_redefinition = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
exclude = '''(?x)(
    dist/.*|
    venv/.*|
    \.venv/.*
)'''
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
no_implicit_optional = true
python_version = "3.12"
show_error_codes = true
strict = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers --strict-config --disable-warnings --import-mode=importlib"
asyncio_mode = "auto"
testpaths = ["tests"]
