[project]
name = "filesystem-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.1.1",
  "mcp-common",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "starlette>=0.46.0",
  "uvicorn>=0.34.0",
]

[project.scripts]
filesystem-mcp = "filesystem_mcp.__main__:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filesystem_mcp"]
